# Communitech

./: .env.example  .flake8  CONTRIBUTING.md  README.md  main.py  pyproject.toml  setup.cfg  tasks.md
.github/workflows/: lint.yml  workflow.yml
apps/community/: models.py  serializers.py  urls.py  views.py
apps/community/migrations/: 0001_initial.py  0002_initial.py
apps/community/tests/: test_models.py  test_serializers.py  test_views.py
apps/course/: admin.py  models.py  serializers.py  urls.py  views.py
apps/course/migrations/: 0001_initial.py  0002_initial.py
apps/course/tests/: test_models.py  test_serializers.py  test_views.py
apps/notification/: models.py  serializers.py  urls.py  views.py
apps/notification/migrations/: 0001_initial.py  0002_initial.py
apps/notification/tests/: test_models.py
apps/payment/: admin.py  models.py  serializers.py  urls.py  views.py
apps/payment/migrations/: 0001_initial.py  0002_initial.py
apps/payment/tests/: test_models.py  test_serializers.py  test_views.py
apps/profile/: serializers.py  ultils.py  views.py
apps/profile/migrations/: 0001_initial.py
apps/profile/tests/: test_models.py  test_views.py  (+1 more)
apps/user/: admin.py  apps.py  models.py  serializers.py  ultils.py  urls.py  views.py
config/: settings.py  urls.py
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/: architecture_design.md  architecture_design.mdc  guideline_engineer.mdc  infra_operations.mdc  requirements.md  requirements.mdc  scope.md  tecnical_decision.md  tecnical_decision.mdc  usecase.mdc  visual_identity.mdc
(+6 files in other folders)
