[project]
name = "comunitu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.44.0",
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.0",
    "pillow>=11.2.1",
    "psycopg2>=2.9.10",
    "whitenoise>=6.9.0",
]
